--- a/Frontend/movie-recommendation/src/Styles/LandingPage.module.css
+++ b/Frontend/movie-recommendation/src/Styles/LandingPage.module.css
@@ -1,30 +1,66 @@
+.mainLandingCont{
+  display: flex;
+
+}
 .landingCont {
+  margin-left: 80px; /* Same width as the sidebar to avoid overlap */
+  flex-grow: 1;
+  padding: 20px;
+  background-color: rgb(6, 7, 8);
+  color: white;
+  height: 100%;
+}
+.header {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  /* background-image: url('../bgImage.jpg');
-  background-size: cover;
-  background-position: center; */
-  background-color: #1b1b1b;
-  padding: 20px;  
-  color: white;
+  margin-left: 80px; /* Same width as the sidebar to avoid overlap */
+  height: 380px;
+  background-color: rgb(6, 7, 8); /* Background color for the rest of the header */
+  width: calc(100% - 80px); /* Ensure it fits within the window minus the sidebar */
+  background-image: url("../avatar.jpg");
+  background-position: right; /* Align the image to the right */
+  background-repeat: no-repeat;
+  background-size: contain; /* Ensure the image fits within the header without overflowing */
+  box-sizing: border-box; /* Prevent overflow by including padding/margins in the width calculation */
+  overflow: hidden; 
 }
+
 
 .searchCont {
   display: flex;
   justify-content: center;
+  width: 100%;
+  margin-top: 20px;
   margin-bottom: 20px;
+  position: relative; /* Set relative positioning */
 }
+
 
 .searchBox {
-  width: 100%;
+  width: 350px;
+  height: 40px;
+  background-color: rgba(33, 38, 43); 
+  color: grey;
+  border: none;
   max-width: 600px;
   padding: 10px 15px;
-  border-radius: 5px;
+  border-radius: 30px;
   font-size: 18px;
   outline: none;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow for a glossy effect */
 }
 
+.title{
+
+  display: flex;
+  flex-direction: column;
+  width:500px;
+  height:100%;
+  justify-content: end;
+  gap:10px;
+  padding: 10px;
+  padding-left: 40px; 
+}
 .sectionTitle {
   font-size: 24px;
   margin-bottom: 10px;
@@ -61,15 +97,17 @@
 }
 
 .suggestions {
-  background-color: white;
-  position: absolute;
-  color: black;
-  width: 20%;
+  background-color: rgba(33, 38, 43, 0.9); /* Same as search box color */
+  position: absolute; /* Absolute positioning */
+  color: white;
+  width: 350px; /* Match the width of the search box */
   max-height: 200px;
   overflow-y: auto;
   border: 1px solid #ccc;
   z-index: 1001;
+  margin-top: 60px; /* Add some space between search box and suggestions */
 }
+
 
 .suggestionItem {
   padding: 10px;
