--- a/Frontend/movie-recommendation/src/Styles/MovieDetail.module.css
+++ b/Frontend/movie-recommendation/src/Styles/MovieDetail.module.css
@@ -1,35 +1,45 @@
 .detailCont {
     display: flex;
-    background-color: #1b1b1b;
+    background-color: rgb(6, 7, 8);
     width: 100%;
     height: 100vh;
+  
 }
 .innerCont{
     display: flex;
+    margin-left: 80px;
+    width: 100%;
+    align-items: center;
     flex-direction: row;
     gap:10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    justify-content: center;
-    padding: 15px;
+    padding: 20px;
+}
+.mainCont{
+    display: flex;
+    justify-content: space-between;
+ 
 }
 .movieDetailCont{
     display: flex;
     flex-direction: column;
-    gap:10px;
+    gap:15px;
+    padding-left:20px;
+
 }
-.detailCont h1 {
+.title {
     font-size: 70px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: #fff;
-    margin-bottom: 20px;
+  
 }
 
 .moviePoster{
-    border-radius: 15px;
+    border-radius: 40px;
     object-fit: contain;
-    width:30%;
-    height: 70%;
+    width:25%;
+    height: 60%;
+    
 }
 .genresCont{
     display: flex;
@@ -105,6 +115,11 @@
 .languagePng{
     width:100%;
     height: 100%;
+}
+.languageList{
+    display: flex;
+    flex-direction: row;
+    gap:10px
 }
 .movieDesc{
     width:60%;
