--- a/Frontend/movie-recommendation/src/Styles/LandingPage.module.css
+++ b/Frontend/movie-recommendation/src/Styles/LandingPage.module.css
@@ -1,6 +1,19 @@
 .mainLandingCont{
   display: flex;
+}
 
+
+.loaderContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 .landingCont {
   margin-left: 80px; /* Same width as the sidebar to avoid overlap */
@@ -83,7 +96,13 @@
   padding: 10px;
   text-align: center;
 }
-
+.movieCard:hover{
+  border:1px;
+  width:300px;
+  height:450px;
+  border-style: solid;
+  color: white;
+}
 .moviePoster {
   width: 100%;
   height: auto;
