--- a/Frontend/movie-recommendation/src/Styles/Sidebar.module.css
+++ b/Frontend/movie-recommendation/src/Styles/Sidebar.module.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 80px; 
-    height: 100vh; 
+    width: 80px;
+    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
@@ -20,6 +20,14 @@
     cursor: pointer;
 }
 
+.iconContainer.active .icon,
+.iconContainer.active .iconLabel {
+    color: #77cbffe8;
+}
+.iconContainer.active .icon{
+    box-shadow: 0px 15px 30px rgba(87, 184, 237, 0.651);
+}
+
 .icon {
     font-size: 24px;
     color: white;
@@ -31,7 +39,8 @@
     color: white;
 }
 
-.iconContainer:hover .icon, 
+.iconContainer:hover .icon,
 .iconContainer:hover .iconLabel {
-    color: #1dbf73; /* Change color on hover */
+    color: #1dbf73;
+    /* Change color on hover */
 }
