--- a/Frontend/movie-recommendation/src/Styles/TvShow.module.css
+++ b/Frontend/movie-recommendation/src/Styles/TvShow.module.css
@@ -1,6 +1,19 @@
 .mainLandingCont{
     display: flex;
+    
   
+  }
+  .loaderContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.7);
   }
   .landingCont {
     margin-left: 80px; /* Same width as the sidebar to avoid overlap */
