--- a/Frontend/movie-recommendation/src/Styles/FavoritePage.module.css
+++ b/Frontend/movie-recommendation/src/Styles/FavoritePage.module.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     padding: 20px;
-    height:100vh
+    min-height:100vh
   }
   
   .favoritesContainer {
