--- a/Frontend/movie-recommendation/src/Styles/LandingPage.module.css
+++ b/Frontend/movie-recommendation/src/Styles/LandingPage.module.css
@@ -101,12 +101,13 @@
 }
 
 .movieCard:hover {
-  border: 1px;
-  width: 300px;
-  height: 450px;
-  border-style: solid;
-  color: white;
+  transform: scale(1.1);
+  transition: 16ms ease; 
+  img {
+    backdrop-filter: blur(10px);
+  }
 }
+
 
 .moviePoster {
   width: 100%;
