--- a/Frontend/movie-recommendation/src/Styles/FavoritePage.module.css
+++ b/Frontend/movie-recommendation/src/Styles/FavoritePage.module.css
@@ -2,9 +2,10 @@
 .favoritesPage {
   background-color: #121212;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 20px;
-  min-height:100vh
+  min-height: 100vh;
 }
 
 .favoritesContainer {
@@ -25,11 +26,10 @@
   background-color: #1e1e1e;
   border-radius: 10px;
   margin-bottom: 20px;
-  overflow: hidden;
-  cursor: pointer;
   display: flex;
   flex-direction: row;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  padding: 10px;
 }
 
 .movieCard:hover {
@@ -37,6 +37,7 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
+/* Movie Poster */
 .moviePoster {
   width: 150px;
   height: 225px;
@@ -44,16 +45,17 @@
   border-radius: 10px;
 }
 
+/* Movie Information */
 .movieInfo {
   padding: 10px;
   flex-grow: 1;
+  color: #f1f1f1;
 }
 
 .movieTitle {
   font-size: 1.2rem;
   font-weight: bold;
   color: #f1f1f1;
-  margin: 0;
   margin-bottom: 5px;
 }
 
@@ -64,12 +66,43 @@
   margin-top: 10px;
 }
 
+/* Button container */
+.buttonContainer {
+  display: flex;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+/* Delete and Select Buttons */
+.deleteButton, .selectButton {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 530;
+}
+
+.deleteButton {
+  background-color: #77cbffc4;
+  color: rgba(0, 0, 0, 0.701);
+  box-shadow: 0 5px 20px rgba(87, 184, 237, 0.651);
+}
+
+.selectButton {
+  background-color: #f39c12;
+  color: white;
+  box-shadow: 0 5px 15px rgba(243, 156, 18, 0.5);
+}
+
 /* No favorites message */
 .noFavoritesMessage {
   color: #f1f1f1;
   text-align: center;
   font-size: 1.2rem;
 }
+
+/* Toggle Sidebar Button */
 .toggleButton {
   display: none; /* Hide by default */
   position: fixed;
@@ -90,9 +123,11 @@
     flex-direction: column;
     align-items: center;
   }
+  
   .toggleButton {
     display: block; /* Show on mobile */
-}
+  }
+  
   .moviePoster {
     width: 100%;
     height: auto;
