--- a/Frontend/movie-recommendation/src/Styles/MovieDetail.module.css
+++ b/Frontend/movie-recommendation/src/Styles/MovieDetail.module.css
@@ -228,6 +228,7 @@
         flex-direction: column;
         height: auto;
         width: 100%;
+        overflow-x: hidden;
         
     }
 .toggleButton {
